--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "querystring": "^0.2.1",
     "random-words": "^1.1.2",
     "tough-cookie": "^4.0.0",
+    "unirest": "^0.6.0",
     "user-agents": "^1.0.1043"
   }
 }
