--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.27.2",
     "axios-cookiejar-support": "^4.0.2",
     "cheerio": "^1.0.0-rc.11",
+    "chrome-aws-lambda": "^10.1.0",
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
     "express": "^4.18.1",
