--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios-cookiejar-support": "^4.0.2",
     "cheerio": "^1.0.0-rc.11",
     "chrome-aws-lambda": "^10.1.0",
+    "chrome-paths": "^1.0.1",
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
     "express": "^4.18.1",
@@ -14,6 +15,7 @@
     "puppeteer": "^14.3.0",
     "puppeteer-afp": "^1.0.1",
     "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-adblocker": "^2.12.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "puppeteer-page-proxy": "^1.2.8",
     "querystring": "^0.2.1",
