--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mail-proton-api": "github:Thiago2703/prtn",
     "puppeteer": "^14.3.0",
     "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-portal": "^3.1.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
+    "puppeteer-page-proxy": "^1.2.8",
     "querystring": "^0.2.1",
     "random-words": "^1.1.2",
     "tough-cookie": "^4.0.0",
