--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "puppeteer-page-proxy": "^1.2.8",
     "querystring": "^0.2.1",
     "random-words": "^1.1.2",
+    "request-promise": "^4.2.6",
     "tough-cookie": "^4.0.0",
     "unirest": "^0.6.0",
     "user-agents": "^1.0.1043"
