--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
     "express": "^4.18.1",
+    "htvenom": "github:venomancer-p1/htvenom",
     "lodash": "^4.17.21",
     "mail-proton-api": "github:Thiago2703/prtn",
     "puppeteer": "^14.3.0",
